--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -221,6 +221,7 @@ a#scrollUp i {
 .header-bottom {
     background: #303030;
     margin-bottom: 10px;
+    padding: 10px 0;
 }
 
 .navbar-collapse.collapse {
@@ -480,8 +481,8 @@ a {
 
 .search_box {
     display: flex;
-    gap: 10px;
-    color: #b2b2b2;
+    /* gap: 10px; */
+    color: black;
     font-family: "roboto";
     font-weight: 300;
     height: 60px;
@@ -489,22 +490,25 @@ a {
     width: 100%;
     box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
     border-radius: 25px;
+    max-width: 500px;
 }
 
 .search_box input {
-    background: #303030;
+    /* background: #303030; */
     width: 100%;
     outline: none;
     border: none;
-    color: #fff;
+    color: black;
+    padding: 10px;
+}
+.search-submit {
+    width: 60px;
+    background: lightcoral;
+    border: none;
 }
 .search-submit,
 #site-header .aws-container .aws-search-form .aws-search-btn_icon {
     color: #fff;
-}
-.search-submit {
-    background: #303030;
-    border: none;
 }
 .razzi-svg-icon {
     vertical-align: -0.125em;
@@ -1133,6 +1137,7 @@ h2.title {
     margin-bottom: 30px;
     position: relative;
     padding-top: 10px;
+    margin-top: 20px;
 }
 
 .product-image-wrapper {
